--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Residência BRISA
 description: > # this means to ignore newlines until "baseurl:"
-  Projeto Residência em TIC da BRISA - UnB FGA
+  Residência em TIC da BRISA/UnB FGA - Projetos 2023.1
 permalink: ':title/'
 baseurl: "/projetos_imersao" # the subpath of your site, e.g. /blog
 url: "https://residenciaticbrisa.github.io" # the base hostname & protocol for your site, e.g. http://example.com
@@ -8,8 +8,9 @@ url: "https://residenciaticbrisa.github.io" # the base hostname & protocol for y
 # Author Settings
 author: 
 author-img: lappis.png
-about-author: Residência BRISA
+about-author: Residência BRISA - Projetos
 social-email: caguiar@unb.br
+social-github: rochacarla
 
 # Build Settings
 markdown: kramdown
