--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Residência BRISA
+title: Residência BRISA/FGA-UnB
 description: > # this means to ignore newlines until "baseurl:"
   Residência em TIC da BRISA/UnB FGA - Projetos 2023.1
 permalink: ':title/'
@@ -8,7 +8,7 @@ url: "https://residenciaticbrisa.github.io" # the base hostname & protocol for y
 # Author Settings
 author: 
 author-img: lappis.png
-about-author: Residência BRISA - Projetos
+about-author: Residência BRISA/UnB FGA  - Projetos 2023.1
 social-email: caguiar@unb.br
 social-github: rochacarla
 
